--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,18 @@
 
 @layer base {
     header{
-        @apply bg-black text-white text-center text-3xl font-bold py-5;
+        @apply bg-slate-900 text-white text-center text-3xl font-bold py-5;
+    }
+}
+
+@layer components {
+    .item-list-locations{
+        @apply py-2 px-2 bg-blue-200 hover:bg-blue-300 text-center active:text-white active:font-semibold active:bg-blue-400 rounded-full mt-3 cursor-pointer select-none
+    }
+    .item-list-locations-active{
+        @apply bg-blue-500 text-white hover:bg-blue-700
+    }
+    .btn-primary {
+        @apply py-2 px-3 rounded-xl text-white bg-blue-500 hover:bg-blue-600 active:bg-blue-700
     }
 }
